# torch-featurelayer

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  pypi-publish.yml  test.yml
examples/: extract_multiple_layers.py  extract_one_layer.py  list_layer_candidates.py
src/torch_featurelayer/: __init__.py  feature_layer.py  feature_layers.py  layer_candidates.py
test/: test_feature_layer.py  test_feature_layers.py  test_get_layer_candidates.py
